--- a/src/gplates-no-gui.html
+++ b/src/gplates-no-gui.html
@@ -1,13 +1,13 @@
-<html>
-    <head>
-        <script src="gplates-no-gui.js"></script>
-        <script>
-            window.onload = async () => {
-                // Create instance. This calls main() etc   
-                let instance = await main();
-            }
-        </script>
-    </head>
-    <body>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Qt App</title>
+</head>
+<body>
+    <pre>The Gplates demo</pre>
+    <pre id="output"></pre>
+    <script async type="text/javascript" src="gplates-no-gui.js" onload="createQtAppInstance().then(() => { console.log('App loaded'); }).catch((e) => { console.error('Error loading app:', e); });"></script>
+</body>
 </html>
