--- a/examples/earth-reconstruction/reconstruction-d3.html
+++ b/examples/earth-reconstruction/reconstruction-d3.html
@@ -47,7 +47,7 @@
 <body data-view-name=points>
     <div style="width:960px; text-align: center; margin:0 auto;"><h1 id="time-label" style="font-size:3em;margin:0;">140 Ma</h1></div>
 	<div style="width:962px; overflow:hidden; margin:0 auto;">
-        <svg style="width:960px; height:500px;"></svg>
+        <svg className="svg-container" style="width:960px; height:500px;"></svg>
         <div style="text-align:center;">
             <label>Time:</label>
             <input id="recon-time" type="number" min="0" step="1" max="550" value="140" style="margin-right:10px;"/>
